# convexdb-schema-parser

./: Cargo.toml  pre-release.ps1  readme.md  test_output.rs  todo.md
convex/: schema.ts  test.ts  test2.ts
debug/: ast.json  functions_ast.json  parsed_functions.json  parsed_schema.json  schema_ast.json
examples/basic/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
examples/basic/convex/: games.ts  schema.ts
examples/basic/debug/: functions_ast.json  parsed_functions.json  parsed_schema.json  schema_ast.json
examples/basic/src/: convex_types.rs  main.rs
src/: code_generator.rs  codegen.rs  convex.rs  convex_types.rs  errors.rs  lib.rs  main.rs  schema.rs
tests/: codegen_tests.rs  function_tests.rs  schema_tests.rs
