[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
convex = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }

[build-dependencies]
convex-typegen = { path = "../../" }
